lang/interpret_test/TestAstFunc2/unify-interpolate-edge1-fail.txtar
-- main.mcl --
$name = ["a", "bb", "ccc",]
test $name {}
test "test" {}

#Test[$name] -> Test["test"]     # must pass
Test["${name}"] -> Test["test"] # must fail

-- OUTPUT --
# err: errUnify: type unification error here: in /main.mcl @6:1-6:15
--
Test["${name}"] -> Test["test"] # must fail
^^^^^^^^^^^^^^^

ERROR: type error: str != list
